<resources>
    <string name="app_name">FirstAppCNTT2-K63</string>
    <string name="avatar">Avatar</string>
    <string name="name">Name</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="hobby">Hobby</string>
    <string name="music">Music</string>
    <string name="sports">Sports</string>
    <string name="add">Add</string>
    <string name="phone">Phone</string>
</resources>